--- a/app/views/diaries/_form.html.erb
+++ b/app/views/diaries/_form.html.erb
@@ -3,11 +3,11 @@
     <%= form.label :japanese_diary, "日記（日本語）", class:"bold" %><br>
     <%= form.text_area :japanese_diary, class:"wide_field", placeholder: "日本語で日記を入力" %>
   </div> 
-  <div class="field border-b">
+  <div class="field pb-6 border-b">
     <%= form.label :english_diary, "日記（英語）", class:"bold" %><br>
     <%= form.text_area :english_diary, class:"wide_field", placeholder: "英語で日記を入力" %>
   </div>
-  <div class="field pt-6 border-b">
+  <div class="field py-6 border-b">
     <%= form.label :photo, "写真", class:"bold" %><br>
     <%= form.file_field :photo, class:"input_field" %>
   </div>
@@ -15,7 +15,7 @@
     <%= form.label :private_flag, "非公開にする", class:"bold" %><br>
     <%= form.check_box :private_flag, class:"input_field" %>
   </div>
-  <div id="words">
+  <div class="pt-6" id="words">
     <%= link_to_add_association "単語、フレーズの追加", form, :words, data: { association_insertion_method: "append" }, class:"border-b" %>
     <%= form.fields_for :words do |word| %>
       <%= render "diaries/word_fields", f: word %>
