--- a/app/views/diaries/_form.html.erb
+++ b/app/views/diaries/_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_with model: model do |form| %>
   <div class="field pt-6">
     <%= form.label :japanese_diary, "日記（日本語）", class:"bold" %><br>
-    <%= form.text_area :japanese_diary, class:"wide_field", placeholder: "日本語で日記を入力" %>
+    <%= form.text_area :japanese_diary, class:"w-4/5 h-40", placeholder: "日本語で日記を入力" %>
   </div> 
   <div class="field pb-6 border-b">
     <%= form.label :english_diary, "日記（英語）", class:"bold" %><br>
-    <%= form.text_area :english_diary, class:"wide_field", placeholder: "英語で日記を入力" %>
+    <%= form.text_area :english_diary, class:"w-4/5 h-40", placeholder: "英語で日記を入力" %>
   </div>
   <div class="field py-6 border-b">
     <%= form.label :photo, "写真", class:"bold" %><br>
