--- a/app/views/diaries/_form.html.erb
+++ b/app/views/diaries/_form.html.erb
@@ -16,7 +16,7 @@
     <%= form.check_box :private_flag, class:"input_field" %>
   </div>
   <div class="pt-6">
-    <%= link_to_add_association "単語、フレーズの追加", form, :words, data: { association_insertion_method: "append" }, class:"border-b" %>
+    <%= link_to_add_association "単語、フレーズの追加", form, :words, data: { association_insertion_method: "append" }, class:"px-6 py-2 bg-gray-300 hover:bg-gray-400 rounded" %>
     <%= form.fields_for :words do |word| %>
       <%= render "diaries/word_fields", f: word %>
     <% end %>
