#20 [update] ボタンを右寄せ

--- a/app/views/diaries/_form.html.erb
+++ b/app/views/diaries/_form.html.erb
@@ -21,7 +21,7 @@
       <%= render "diaries/word_fields", f: word %>
     <% end %>
   </div>
-  <div class="field pt-6">
+  <div class="field pt-6 text-end">
     <%= form.submit "登録", class: "submit" %>
   </div>
 <% end %>
