--- a/app/views/diaries/edit.html.erb
+++ b/app/views/diaries/edit.html.erb
@@ -18,7 +18,7 @@
       <%= f.label :private_flag, "非公開にする", class:"bold" %><br>
       <%= f.check_box :private_flag, class:"input_field" %>
     </div>
-    <div class="field">
+    <div class="field text-end">
       <%= f.submit "編集", class: "submit" %>
     </div>
   <% end %>
