#20 [update] 小見出しを太文字にした

--- a/app/views/exam_questions/show.html.erb
+++ b/app/views/exam_questions/show.html.erb
@@ -1,5 +1,5 @@
 <div class="short_container">
-  <h2>単語テスト</h2>
+  <h2 class="font-semibold">単語テスト</h2>
   <div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
     <div class="exam_area">
       <p><span>「<%= @exam_question.word.japanese_word %>」</span>の英語訳は？</p>
