--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
-  <h3>テスト結果</h3>
+  <h3 class="font-semibold">テスト結果</h3>
     <p class="correct_answers">
       10<span>問中</span><%= @correct_answers.size %><span>問正解</span>
     </p>
