--- a/app/views/all_diaries/index.html.erb
+++ b/app/views/all_diaries/index.html.erb
@@ -1,5 +1,5 @@
 <div class="index_container">
-  <h2>日記一覧</h2>
+  <h2 class="font-semibold">日記一覧</h2>
   <div class="diaries">
     <% @diaries.each do |diary| %>
       <div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
