--- a/app/views/diaries/edit.html.erb
+++ b/app/views/diaries/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
-  <h3>日記編集</h3>
+  <h3 class="font-semibold">日記編集</h3>
 
   <%= form_with model: @diary do |f| %>
     <div class="field">
