#20 [update] ボタンを右寄せ

--- a/app/views/exam_questions/show.html.erb
+++ b/app/views/exam_questions/show.html.erb
@@ -8,7 +8,7 @@
         <%= f.text_field :english_word, autocomplete:"off", class:"text_field", placeholder: "apple" %>
       </div>
     </div>
-      <div class="field">
+      <div class="field text-end">
         <%= f.submit "次へ", class:"submit" %>
       </div>
     <% end %>
