#20 [update] リンクを右寄せ

--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -31,7 +31,7 @@
         <% end %>
       </div>
     </div>
-    <ul class="result_links">
+    <ul class="result_links text-end">
       <li><%= link_to "もう一度単語テストをする", new_exam_path %></li>
       <li><%= link_to "単語帳へ", words_path %></li>
     </ul>
