--- a/app/views/diaries/_form.html.erb
+++ b/app/views/diaries/_form.html.erb
@@ -11,9 +11,9 @@
     <%= form.label :photo, "写真", class:"bold" %><br>
     <%= form.file_field :photo, class:"input_field" %>
   </div>
-  <div class="field py-6 border-b">
-    <%= form.label :private_flag, "非公開にする", class:"bold" %><br>
-    <%= form.check_box :private_flag, class:"input_field" %>
+  <div class="field flex py-6 border-b">
+    <%= form.label :private_flag, "非公開にする", class:"pr-3" %>
+    <%= form.check_box :private_flag %>
   </div>
   <div class="pt-6">
     <%= link_to_add_association "単語、フレーズの追加", form, :words, data: { association_insertion_method: "append" }, class:"px-6 py-2 bg-gray-300 hover:bg-gray-400 rounded" %>
