--- a/app/views/all_diaries/index.html.erb
+++ b/app/views/all_diaries/index.html.erb
@@ -38,7 +38,7 @@
             </div>
           <% end %>
         </div>
-        <div class="link">
+        <div class="link text-end">
           <%= link_to "編集", edit_diary_path(diary.id) %>
         </div>
       </div>
