--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,5 +1,5 @@
 <div class="index_container">
-  <h2><%= current_user.username %>さんの単語帳</h2>
+  <h2 class="font-semibold"><%= current_user.username %>さんの単語帳</h2>
   <div class="diaries">
     <% @words.each do |word| %>
       <div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
