--- a/app/views/exams/new.html.erb
+++ b/app/views/exams/new.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
+<div class="bg-white shadow mx-auto my-8 p-6 w-8/12 rounded">
   <h3 class="font-semibold exam">単語テスト<span>10問</span></h3>
   <%= form_with model: @exam, url: exams_path do |f| %>
   <div class="exam_start field">
