#20 [update] 入力欄を広げた

--- a/app/views/exam_questions/show.html.erb
+++ b/app/views/exam_questions/show.html.erb
@@ -5,7 +5,7 @@
       <%= form_with model: @exam_question, url: exam_question_path do |f| %>
       <div class="field">
         <%= f.label :english_word, "回答", class:"answer" %>：
-        <%= f.text_field :english_word, autocomplete:"off", class:"text_field", placeholder: "apple" %>
+        <%= f.text_field :english_word, autocomplete:"off", class:"w-4/5", placeholder: "apple" %>
       </div>
     </div>
       <div class="field text-end">
