--- a/app/views/exam_questions/show.html.erb
+++ b/app/views/exam_questions/show.html.erb
@@ -1,5 +1,5 @@
 <div class="short_container">
-  <div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
+  <div class="bg-white shadow mx-auto my-8 p-6 w-8/12 rounded">
     <div class="exam_area">
       <p><span>「<%= @exam_question.word.japanese_word %>」</span>の英語訳は？</p>
       <%= form_with model: @exam_question, url: exam_question_path do |f| %>
