--- a/app/views/diaries/_word_fields.html.erb
+++ b/app/views/diaries/_word_fields.html.erb
@@ -12,7 +12,7 @@
     <%= f.label :memo, "メモ", class:"bold" %><br>
     <%= f.text_area :memo, class:"w-4/5 h-40", placeholder: "可算名詞" %>
   </div>
-  <div class="field py-6 border-b">
+  <div class="field py-6 border-b text-end">
   <%= link_to_remove_association "削除", f %>
   </div>
 </div>
