--- a/app/views/diaries/show.html.erb
+++ b/app/views/diaries/show.html.erb
@@ -26,7 +26,7 @@
       </div>
     <% end %>
   </div>
-  <div class="link">
+  <div class="link text-end">
     <%= link_to "編集", edit_diary_path(@diary.id) %>
     <%= button_to "削除", diary_path(@diary.id), { method: :delete, data: { confirm: "本当に削除しますか？" }, class: "diary_destroy_button" } %>
   </div>
