--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,22 +1,22 @@
-<div class="container">
+<div class="bg-white shadow mx-auto my-8 p-6 w-8/12 rounded">
   <div class="user_input_area">
-    <h3>プロフィール編集</h3>
+    <h3 class="font-semibold">プロフィール編集</h3>
     <%= form_with model: @user, url: profiles_path do |f| %>
       <% if current_user.avatar? %>
       <% end %>
-      <div class="field">
+      <div class="field mt-3">
         <div><%= f.label :avatar, "アイコン画像" %></div>
         <div><%= f.file_field :avatar, class: "avatar" %></div>
       </div>
-      <div class="field">
+      <div class="field mt-3">
         <div><%= f.label :username, "ユーザーネーム" %></div>
-        <div><%= f.text_field :username, class: "name" %></div>
+        <div><%= f.text_field :username, class: "name w-4/5" %></div>
       </div>
-      <div class="field">
+      <div class="field mt-3">
         <div><%= f.label :bio, "一言メッセージ" %></div>
-        <div><%= f.text_area :bio, class: "bio" %></div>
+        <div><%= f.text_area :bio, class: "bio w-4/5 h-5/6" %></div>
       </div>
-      <div class="field">
+      <div class="field mt-3 text-end">
         <div><%= f.submit "更新", class: "submit" %></div>
       </div>
     <% end %>
