--- a/app/views/diaries/_form.html.erb
+++ b/app/views/diaries/_form.html.erb
@@ -7,7 +7,7 @@
     <%= form.label :english_diary, "日記（英語）", class:"bold" %><br>
     <%= form.text_area :english_diary, class:"w-4/5 h-40", placeholder: "英語で日記を入力" %>
   </div>
-  <div class="pt-6">
+  <div class="py-6 border-b">
     <%= link_to_add_association "単語、フレーズの追加", form, :words, data: { association_insertion_method: "append" }, class:"px-6 py-2 bg-gray-300 hover:bg-gray-400 rounded" %>
     <%= form.fields_for :words do |word| %>
       <%= render "diaries/word_fields", f: word %>
