--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
+<div class="bg-white shadow mx-auto my-8 p-6 w-8/12 rounded">
   <h1>ようこそ</h1>
   <p>トップページです。</p>
 </div>
