#20 [update] 見出しの文字の大きさ変更

--- a/app/views/exams/new.html.erb
+++ b/app/views/exams/new.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-white shadow mx-auto my-8 p-6 w-8/12 rounded">
-  <h3 class="font-semibold text-base exam">単語テスト<span>10問</span></h3>
+  <h3 class="font-semibold text-3xl exam">単語テスト<span>10問</span></h3>
   <%= form_with model: @exam, url: exams_path do |f| %>
   <div class="exam_start field text-end">
     <%= f.submit "テスト開始", class:"submit" %>
