--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -19,7 +19,7 @@
             <% end %>
           </div>
         </div>
-        <div class="photo">
+        <div class="photo mt-3">
           <% if diary.photo? %>
             <%= image_tag diary.photo.url %>
           <% end %>
