#20 [update] 非公開のラベルとチェックボックスを横に並べた

--- a/app/views/diaries/edit.html.erb
+++ b/app/views/diaries/edit.html.erb
@@ -13,8 +13,8 @@
       <%= f.label :photo, "写真", class:"bold" %><br>
       <%= f.file_field :photo, class:"input_field" %>
     </div>
-    <div class="field py-6 border-b">
-      <%= f.label :private_flag, "非公開にする", class:"bold" %><br>
+    <div class="field flex py-6 border-b">
+      <%= f.label :private_flag, "非公開にする", class:"pr-3" %><br>
       <%= f.check_box :private_flag, class:"input_field" %>
     </div>
     <div class="field py-6 text-end">
