--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -3,7 +3,7 @@
   <div class="diaries">
     <% @words.each do |word| %>
       <div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
-        <div class="container_top">
+        <div class="mb-3 container_top">
           <div class="created_at">
             <%= word.created_at.strftime("%Y年%m月%d日 %H時%M分") %>
           </div>
