--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -13,11 +13,11 @@
             <%= word.japanese_word %>
           </div>
         </div>
-        <div class="english_word">
+        <div class="english_word border-b">
           <%= word.english_word %>
         </div>
         <% if word.memo %>
-          <div class="memo">
+          <div class="memo pt-3">
             <%= word.memo %>
           </div>
         <% end %>
