--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -13,7 +13,7 @@
             <%= word.japanese_word %>
           </div>
         </div>
-        <div class="english_word">
+        <div class="english_word mb-3">
           <%= word.english_word %>
         </div>
         <% if word.memo.present? %>
