--- a/app/views/diaries/new.html.erb
+++ b/app/views/diaries/new.html.erb
@@ -1,4 +1,4 @@
 <div class="bg-white shadow mx-auto my-8 p-6 w-8/12 rounded">
-  <h1 class="font-semibold text-base border-b">日記投稿</h1>
+  <h1 class="font-semibold text-base">日記投稿</h1>
   <%= render "diaries/form", model: @diary %>
 </div>
