--- a/app/views/diaries/_form.html.erb
+++ b/app/views/diaries/_form.html.erb
@@ -8,7 +8,10 @@
     <%= form.text_area :english_diary, class:"w-4/5 h-40", placeholder: "英語で日記を入力" %>
   </div>
   <div class="py-6 border-b">
-    <%= link_to_add_association "単語、フレーズを追加する", form, :words, data: { association_insertion_method: "append" }, class:"px-3 py-2 bg-gray-300 hover:bg-gray-400 rounded" %>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="inline w-6 h-6">
+      <path fill-rule="evenodd" d="M12 3.75a.75.75 0 01.75.75v6.75h6.75a.75.75 0 010 1.5h-6.75v6.75a.75.75 0 01-1.5 0v-6.75H4.5a.75.75 0 010-1.5h6.75V4.5a.75.75 0 01.75-.75z" clip-rule="evenodd" />
+    </svg>
+    <%= link_to_add_association "単語、フレーズを追加する", form, :words, data: { association_insertion_method: "append" }, class:"inline ml-1 px-3 py-2 bg-gray-300 hover:bg-gray-400 rounded" %>       
     <%= form.fields_for :words do |word| %>
       <%= render "diaries/word_fields", f: word %>
     <% end %>
