--- a/app/views/diaries/edit.html.erb
+++ b/app/views/diaries/edit.html.erb
@@ -3,11 +3,11 @@
   <%= form_with model: @diary do |f| %>
     <div class="field pt-6">
       <%= f.label :japanese_diary, "日記（日本語）", class:"bold" %><br>
-      <%= f.text_area :japanese_diary, class:"w-4/5 h-40", placeholder: "日本語で日記を入力" %>
+      <%= f.text_area :japanese_diary, class:"w-4/5 h-40 rounded", placeholder: "日本語で日記を入力" %>
     </div> 
     <div class="field pb-6 border-b">
       <%= f.label :english_diary, "日記（英語）", class:"bold" %><br>
-      <%= f.text_area :english_diary, class:"w-4/5 h-40", placeholder: "英語で日記を入力" %>
+      <%= f.text_area :english_diary, class:"w-4/5 h-40 rounded", placeholder: "英語で日記を入力" %>
     </div>
     <div class="field py-6 border-b">
       <%= f.label :photo, "写真", class:"bold" %><br>
