#20 [update] 767px以下の画面で、日記投稿のエリアが親要素に対し100％の広さで表示するようにした

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
       <% if user_signed_in? %>
         <%= render "shared/sidebar" %>
       <% end %>
-      <div id="main_area">
+      <div class="w-full md:w-[82%]">
         <%= yield %>
       </div>
     </div>
