--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,39 +11,50 @@
     <%= javascript_include_tag 'https://cdn.jsdelivr.net/npm/@oddcamp/cocoon-vanilla-js@1.1.3/index.min.js' %>
   </head>
   <body>
-    <header class="text-white pb-1">
-      <div class="flex justify-between items-center">
-        <h1 class="text-2xl font-semibold">English Diary</h1>
-        <div>
-          <button>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="md:hidden w-8 h-8 fill-current">
-              <path fill-rule="evenodd" d="M3 6.75A.75.75 0 013.75 6h16.5a.75.75 0 010 1.5H3.75A.75.75 0 013 6.75zM3 12a.75.75 0 01.75-.75h16.5a.75.75 0 010 1.5H3.75A.75.75 0 013 12zm0 5.25a.75.75 0 01.75-.75h16.5a.75.75 0 010 1.5H3.75a.75.75 0 01-.75-.75z" clip-rule="evenodd" />
-            </svg>    
-          </button>
-        </div>
-      </div>
+    <header class="flex text-white px-4 py-2">
       <div>
-        <ul class="md:flex md:justify-end">
-          <% if user_signed_in? %>
-            <li class="block px-8 py-2">
+        <h1 class="text-2xl font-semibold leading-10">English Diary</h1>
+      </div>
+      <div class="ml-auto sp-menu">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" id="open" class="md:hidden w-9 h-9 fill-current">
+          <path fill-rule="evenodd" d="M3 6.75A.75.75 0 013.75 6h16.5a.75.75 0 010 1.5H3.75A.75.75 0 013 6.75zM3 12a.75.75 0 01.75-.75h16.5a.75.75 0 010 1.5H3.75A.75.75 0 013 12zm0 5.25a.75.75 0 01.75-.75h16.5a.75.75 0 010 1.5H3.75a.75.75 0 01-.75-.75z" clip-rule="evenodd" />
+        </svg>
+      </div>
+
+      <div class="overlay">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" id="close" class="w-9 h-9 text-black">
+          <path fill-rule="evenodd" d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z" clip-rule="evenodd" />
+        </svg>
+        <nav>
+          <ul class="list-none m-0 p-0">
+            <% if user_signed_in? %>
+            <li class="px-8 py-2">
               <% if current_user.avatar? %>
                 <%= image_tag current_user.avatar.url %>
               <% else %>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="text-black w-8 h-8">
                   <path fill-rule="evenodd" d="M18.685 19.097A9.723 9.723 0 0021.75 12c0-5.385-4.365-9.75-9.75-9.75S2.25 6.615 2.25 12a9.723 9.723 0 003.065 7.097A9.716 9.716 0 0012 21.75a9.716 9.716 0 006.685-2.653zm-12.54-1.285A7.486 7.486 0 0112 15a7.486 7.486 0 015.855 2.812A8.224 8.224 0 0112 20.25a8.224 8.224 0 01-5.855-2.438zM15.75 9a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" clip-rule="evenodd" />
-                </svg>
+                </svg> -->
               <% end %>
             </li>
-            <li class="block px-8 py-2 border-b md:border-none"><%= link_to "ホーム", homes_show_path %></li>
-            <li class="block px-8 py-2 border-b md:border-none"><%= link_to "プロフィール変更", edit_profiles_path %></li>
-            <li class="block px-8 py-2 text-black hover:font-bold"><%= button_to "ログアウト", destroy_user_session_path, method: :delete %></li>
+            <li class="px-8 py-2 border-b"><%= link_to "ホーム", homes_show_path %></li>
+            <li class="px-8 py-2 border-b"><%= link_to "プロフィール変更", edit_profiles_path %></li>
+            <li class="px-8 py-2 text-black hover:font-bold"><%= button_to "ログアウト", destroy_user_session_path, method: :delete %></li>
           <% else %>
-            <li class="block px-8 py-2 border-b md:border-none"><%= link_to "サインアップ", new_user_registration_path %></li>
-            <li class="block px-8 py-2 border-b md:border-none"><%= link_to "ログイン", new_user_session_path %></li>
-            <li class="block px-8 py-2 text-black hover:font-bold"><%= button_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, data: { turbo_method: :post } %></li>
+            <li class="px-8 py-2 border-b"><%= link_to "サインアップ", new_user_registration_path %></li>
+            <li class="px-8 py-2 border-b"><%= link_to "ログイン", new_user_session_path %></li>
+            <li class="px-8 py-2 text-black hover:font-bold"><%= button_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, data: { turbo_method: :post } %></li>
           <% end %>
-        </ul>
+          </ul>
+        </nav>
       </div>
+
+
+      <!-- <div>
+        <ul class="md:flex md:justify-end">
+          
+        </ul>
+      </div> -->
     </header>
     <div id="message">
       <% if notice or alert %>
@@ -64,5 +75,6 @@
         <small>&copy; 2023 English Diary</small>
       </div>
     </footer>
+    <script src="js/main.js"></script>
   </body>
 </html>
