--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <h1 class="text-2xl font-semibold leading-10">English Diary</h1>
       </div>
       <div class="ml-auto sp-menu">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" id="open" class="md:hidden w-9 h-9 fill-current">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" id="open" class="w-9 h-9 fill-current">
           <path fill-rule="evenodd" d="M3 6.75A.75.75 0 013.75 6h16.5a.75.75 0 010 1.5H3.75A.75.75 0 013 6.75zM3 12a.75.75 0 01.75-.75h16.5a.75.75 0 010 1.5H3.75A.75.75 0 013 12zm0 5.25a.75.75 0 01.75-.75h16.5a.75.75 0 010 1.5H3.75a.75.75 0 01-.75-.75z" clip-rule="evenodd" />
         </svg>
       </div>
@@ -62,7 +62,7 @@
         <p class="alert"><%= alert %></p>
       <% end %>
     </div>
-    <div class="flex">
+    <div class="flex min-h-screen">
       <% if user_signed_in? %>
         <%= render "shared/sidebar" %>
       <% end %>
