#20 [update] 必須というマーク追加

--- a/app/views/diaries/_form.html.erb
+++ b/app/views/diaries/_form.html.erb
@@ -4,7 +4,7 @@
     <%= form.text_area :japanese_diary, class:"w-4/5 h-40 rounded", placeholder: "日本語で日記を入力" %>
   </div> 
   <div class="field pb-3">
-    <%= form.label :english_diary, "日記（英語）", class:"bold" %><br>
+    <%= form.label :english_diary, "日記（英語）", class:"mr-2" %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100">必須</span><br>
     <%= form.text_area :english_diary, class:"w-4/5 h-40 rounded", placeholder: "英語で日記を入力" %>
   </div>
   <div class="py-6 border-b">
