--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,12 +5,12 @@
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="field">
-      <%= f.label :username %><br />
+      <%= f.label :username %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100"></span><br />
       <%= f.text_field :username %>
     </div>
 
     <div class="field">
-      <%= f.label :email %><br />
+      <%= f.label :email %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100"></span><br />
       <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
     </div>
 
@@ -18,12 +18,12 @@
       <%= f.label :password %>
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
+      <% end %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100"></span><br />
       <%= f.password_field :password, autocomplete: "new-password" %>
     </div>
 
     <div class="field">
-      <%= f.label :password_confirmation %><br />
+      <%= f.label :password_confirmation %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100"></span><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
     </div>
 
