#20 [update] 不要なmin-h-screenクラス削除

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<aside class="min-h-screen max-md:hidden" id="sidebar">
+<aside class="max-md:hidden" id="sidebar">
   <ul class="pt-8 pl-2 pr-4">
     <li class="text-base">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="inline w-6 h-6 mr-2">
