#20 [update] 画面780px以下でのサイドバーをfooterの上に作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,6 +70,9 @@
         <%= yield %>
       </div>
     </div>
+    <% if user_signed_in? %>
+        <%= render "shared/bottombar" %>
+    <% end %>
     <footer>
       <div class="footer_navi">
         <small>&copy; 2023 English Diary</small>
