#20 [update] ヘッダーの見た目を整えた

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,22 +22,22 @@
         <nav>
           <ul class="list-none flex m-0 p-0">
             <% if user_signed_in? %>
-            <li class="px-8 py-2">
+            <li class="px-8 text-center">
               <% if current_user.avatar? %>
                 <%= image_tag current_user.avatar.url, class:"leading-10" %>
               <% else %>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="text-black w-8 h-8 leading-10">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="text-black w-8 h-8">
                   <path fill-rule="evenodd" d="M18.685 19.097A9.723 9.723 0 0021.75 12c0-5.385-4.365-9.75-9.75-9.75S2.25 6.615 2.25 12a9.723 9.723 0 003.065 7.097A9.716 9.716 0 0012 21.75a9.716 9.716 0 006.685-2.653zm-12.54-1.285A7.486 7.486 0 0112 15a7.486 7.486 0 015.855 2.812A8.224 8.224 0 0112 20.25a8.224 8.224 0 01-5.855-2.438zM15.75 9a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" clip-rule="evenodd" />
                 </svg>
               <% end %>
             </li>
-            <li class="px-8 py-2"><%= link_to "ホーム", homes_show_path, class:"leading-10" %></li>
-            <li class="px-8 py-2"><%= link_to "プロフィール変更", edit_profiles_path, class:"leading-10" %></li>
-            <li class="px-8 py-2 text-black hover:font-bold"><%= button_to "ログアウト", destroy_user_session_path, method: :delete, class:"leading-10" %></li>
+            <li class="px-8 text-center"><%= link_to "ホーム", homes_show_path, class:"leading-10 block" %></li>
+            <li class="px-8"><%= link_to "プロフィール変更", edit_profiles_path, class:"leading-10 block" %></li>
+            <li class="px-8 text-black hover:font-bold"><%= button_to "ログアウト", destroy_user_session_path, method: :delete, class:"leading-10 block" %></li>
           <% else %>
-            <li class="px-8 py-2"><%= link_to "サインアップ", new_user_registration_path, class:"leading-10" %></li>
-            <li class="px-8 py-2"><%= link_to "ログイン", new_user_session_path, class:"leading-10" %></li>
-            <li class="px-8 py-2 text-black hover:font-bold"><%= button_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, data: { turbo_method: :post }, class:"leading-10" %></li>
+            <li class="px-8"><%= link_to "サインアップ", new_user_registration_path, class:"leading-10  block" %></li>
+            <li class="px-8"><%= link_to "ログイン", new_user_session_path, class:"leading-10  block" %></li>
+            <li class="px-8 text-black hover:font-bold"><%= button_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, data: { turbo_method: :post }, class:"leading-10 block" %></li>
           <% end %>
           </ul>
         </nav>
