--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,30 +1,30 @@
 
 <div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
-  <h2>Sign up</h2>
+  <h2 class="text-2xl font-semibold te ml-0 pl-0 mb-8">Sign up</h2>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="field">
-      <%= f.label :username %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100"></span><br />
-      <%= f.text_field :username %>
+    <div class="field mb-3">
+      <%= f.label :username, "ユーザーネーム" %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100">必須</span><br />
+      <%= f.text_field :username, class:"w-4/5" %>
     </div>
 
-    <div class="field">
-      <%= f.label :email %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100"></span><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <div class="field mb-3">
+      <%= f.label :email %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100">必須</span><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"w-4/5" %>
     </div>
 
-    <div class="field">
+    <div class="field mb-3">
       <%= f.label :password %>
       <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100"></span><br />
-      <%= f.password_field :password, autocomplete: "new-password" %>
+      <em>(<%= @minimum_password_length %> 文字以上)</em>
+      <% end %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100">必須</span><br />
+      <%= f.password_field :password, autocomplete: "new-password", class:"w-4/5" %>
     </div>
 
-    <div class="field">
-      <%= f.label :password_confirmation %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100"></span><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <div class="field mb-3">
+      <%= f.label :password_confirmation %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100">必須</span><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"w-4/5" %>
     </div>
 
     <div class="actions">
