--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,12 +5,12 @@
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="field mb-3">
-      <%= f.label :username, "ユーザーネーム" %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100">必須</span><br />
+      <%= f.label :username, "ユーザーネーム" %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100 ml-1">必須</span><br />
       <%= f.text_field :username, class:"w-4/5" %>
     </div>
 
     <div class="field mb-3">
-      <%= f.label :email %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100">必須</span><br />
+      <%= f.label :email %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100 ml-1">必須</span><br />
       <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"w-4/5" %>
     </div>
 
@@ -18,12 +18,12 @@
       <%= f.label :password %>
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> 文字以上)</em>
-      <% end %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100">必須</span><br />
+      <% end %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100 ml-1">必須</span><br />
       <%= f.password_field :password, autocomplete: "new-password", class:"w-4/5" %>
     </div>
 
     <div class="field mb-3">
-      <%= f.label :password_confirmation %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100">必須</span><br />
+      <%= f.label :password_confirmation %><span class="font-bold text-xs p-0.5 text-rose-500 bg-rose-100 ml-1">必須</span><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"w-4/5" %>
     </div>
 
