--- a/app/views/diaries/_form.html.erb
+++ b/app/views/diaries/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: model do |form| %>
+<%= form_with model: model, local: true, data: { turbo: false } do |form| %>
   <div class="field pt-6">
     <%= form.label :japanese_diary, "日記（日本語）", class:"bold" %><br>
     <%= form.text_area :japanese_diary, class:"w-4/5 h-40 rounded", placeholder: "今日は７時に起きた。" %>
