--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -1,11 +1,11 @@
 <div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
-  <h1 class="font-semibold">テスト結果</h1>
+  <h1 class="font-semibold mb-3">テスト結果</h1>
     <p class="correct_answers">
       10<span>問中</span><%= @correct_answers.size %><span>問正解</span>
     </p>
     <div class="answers_list">
       <div class="correct_answers_lists">
-        <h3>正解</h3>
+        <h3 class="font-semibold mt-3 mb-3 text-rose-600">正解</h3>
         <table class="table-auto w-full">
           <thead class="text-xs font-semibold uppercase text-gray-400 bg-gray-50">
             <tr>
@@ -30,7 +30,7 @@
         </table>
       </div>
       <div class="wrong_answers_lists">
-        <h3 class="mt-6">不正解</h3>
+        <h3 class="mt-6 mb-3 font-semibold text-blue-600">不正解</h3>
         <table class="table-auto w-full">
           <thead class="text-xs font-semibold uppercase text-gray-400 bg-gray-50">
             <tr>
