--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
+<div class="bg-white shadow mx-auto my-6 p-6 w-8/12 rounded">
   <h1 class="font-semibold mb-3">テスト結果</h1>
     <p class="correct_answers">
       10<span>問中</span><%= @correct_answers.size %><span>問正解</span>
