#45 [update] レスポンシブサイドバー、footerを固定

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -116,12 +116,24 @@ header {
   padding: 20px;
 }
 
+.bottombar {
+  z-index: 100;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
 footer {
   text-align: center;
   background-color: #f8b042;
   margin-bottom: 0;
   color: white;
   padding: 10px 0;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
 
 .container_top {
