--- a/app/views/shared/_bottombar.html.erb
+++ b/app/views/shared/_bottombar.html.erb
@@ -1,4 +1,4 @@
-<aside class="md:hidden text-black">
+<aside class="bottombar md:hidden text-black">
   <ul class="flex justify-around py-3 bg-white border-t">
     <li class="text-base">
       <a href="/homes/show">
