#18 [update] 文字を装飾

--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,5 +1,11 @@
 <div class="bg-white shadow mx-auto my-8 p-6 w-8/12 rounded">
-  <p class="mb-3 text-xl">Hello, <span class="font-semibold"><%= current_user.username %></span>さん</p>
+  <p class="text-xl">Hello, <span class="font-semibold"><%= current_user.username %></span>さん</p>
+  <p class="className={`
+    mt-1 mb-6 font-bold tracking-tight bg-gradient-to-r from-green-500 via-blue-500 to-pink-500
+    bg-clip-text text-transparent text-lg
+    `}">
+    Let's do our best again today!
+  </p>
   <div class="flex justify-around">
     <div class="w-5/12 bg-yellow-100 shadow my-3 p-3 rounded">
       <p class="font-semibold mb-3">日記総投稿回数</p>
