#18 [update] 適切な変数名に変更

--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -9,11 +9,11 @@
   <div class="flex justify-around">
     <div class="w-5/12 bg-yellow-100 shadow my-3 p-3 rounded">
       <p class="font-semibold mb-3">日記総投稿回数</p>
-      <p class="text-end"><span class="font-semibold text-2xl"><%= @posted_days.count %></span> 回</p>
+      <p class="text-end"><span class="font-semibold text-2xl"><%= @diaries.count %></span> 回</p>
     </div>
     <div class="w-5/12 bg-green-100 shadow my-3 p-3 rounded">
       <p class="font-semibold mb-3">学んだ単語数</p>
-      <p class="text-end"><span class="font-semibold text-2xl"><%= @number_of_words.count %></span> 個</p>
+      <p class="text-end"><span class="font-semibold text-2xl"><%= @words.count %></span> 個</p>
     </div>
   </div>
 </div>
