--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white shadow mx-auto mt-3 mb-3 p-6 w-8/12 rounded">
+<div class="bg-white shadow mx-auto mt-3 mb-3 py-6 px-10 w-8/12 rounded">
 
   <h2>Forgot your password?</h2>
 
