--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,7 +79,7 @@
       <% if user_signed_in? %>
         <%= render "shared/sidebar" %>
       <% end %>
-      <div class="w-full max-md:w-[80%]">
+      <div class="w-full md:w-[80%]">
         <%= yield %>
       </div>
     </div>
