#55 [update] 文字を大きくした

--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -14,7 +14,7 @@
   <% if current_user.bio? %>
     <p class="className={`
       mt-3 mb-12 font-bold tracking-tight bg-gradient-to-r from-green-500 via-blue-500 to-pink-500
-      bg-clip-text text-transparent text-center
+      bg-clip-text text-transparent text-center text-xl
       `}">
         <%= current_user.bio %>
     </p>
