#18 [update] 現在の日記投稿継続日数の表示をしないことにしたので記述を削除

--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -26,12 +26,8 @@
         Let's do my best today again!
     </p>
   <% end %>
-  <div class="flex justify-around">
-    <div class="w-5/12 bg-pink-100 shadow my-3 p-3 rounded">
-      <p class="font-semibold mb-3">現在の日記投稿継続日数</p>
-      <p class="text-end"><span class="font-semibold text-2xl"><%#= @diaries.count %></span> 日</p>
-    </div>
-    <div class="w-5/12 bg-yellow-100 shadow my-3 p-3 rounded">
+  <div>
+    <div class="bg-yellow-100 shadow my-3 p-3 rounded">
       <p class="font-semibold mb-3">日記投稿日数</p>
       <p class="text-end"><span class="font-semibold text-2xl"><%#= @words.count %></span> 日</p>
     </div>
