#18 [update] shadowを薄くした

--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -27,7 +27,7 @@
     </p>
   <% end %>
   <div class="mb-12">
-    <div class="bg-yellow-100 w-5/12 mx-auto drop-shadow-lg my-3 p-4 rounded">
+    <div class="bg-yellow-100 w-5/12 mx-auto shadow my-3 p-4 rounded">
       <p class="font-semibold mb-3">これまでの日記投稿日数</p>
       <p class="text-end"><span class="font-semibold text-2xl"><%= @diary_posted_days.count %></span> 日</p>
     </div>
