--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -23,7 +23,7 @@
       mt-3 mb-12 font-bold tracking-tight bg-gradient-to-r from-green-500 via-blue-500 to-pink-500
       bg-clip-text text-transparent text-center text-xl
       `}">
-        Let's do my best today again!
+        Let's do my best again today!
     </p>
   <% end %>
   <div class="mb-12">
