#60 [update] footerのfixを解除し、md以上でfooterを隠すようにした

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,7 +86,7 @@
     <% if user_signed_in? %>
         <%= render "shared/bottombar" %>
     <% end %>
-    <footer>
+    <footer class="max-md:hidden">
       <div class="footer_navi">
         <small>&copy; 2023 English Diary</small>
       </div>
