#60 [update] 日記編集ページの登録ボタンが隠れないよう、max-md:pb-20追加

--- a/app/views/diaries/edit.html.erb
+++ b/app/views/diaries/edit.html.erb
@@ -17,7 +17,7 @@
       <%= f.label :private_flag, "非公開にする", class:"pr-3" %><br>
       <%= f.check_box :private_flag, class:"input_field" %>
     </div>
-    <div class="field py-6 text-end">
+    <div class="field py-6 text-end max-md:pb-20">
       <%= f.submit "編集", class: "submit" %>
     </div>
   <% end %>
