#60 [update] ユーザーホーム画面の余白追加

--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white shadow mx-auto sm:my-8 p-6 sm:w-8/12 rounded">
+<div class="bg-white shadow mx-auto sm:my-8 sm:p-6 px-6 pt-6 pb-20 sm:w-8/12 rounded">
   <div class="mx-6 mt-8 flex">
     <div>
       <% if current_user.avatar? %>
