#65 [update] ユーザーホームページへのURLを変更したため、変更後のものを記載

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,5 @@
-<div class="bg-white shadow mx-auto my-8 p-6 w-8/12 rounded">
-  <h1>ようこそ</h1>
-  <p>トップページです。</p>
+<div class="bg-white shadow mx-auto sm:my-8 sm:p-6 px-6 pt-6 pb-20 sm:w-8/12 rounded">
+  <div class="mx-6 mt-8">
+    <h1>English Diary</h1>
+  </div>
 </div>
